[package]
name = "kvs"
authors = ["Zheng Zhi <zhizheng0619@gmail.com>"]
description = "Solution for talent-plan rust projects"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
